# EasyGS

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README_zh.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  new.peakanno.tsv  new.peakanno_summary.txt  pyproject.toml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
container/: .env.example  Dockerfile  README.md  README_zh.md  build.sh  docker-compose.yml  entrypoint.sh
container/envs/: EasyGS_1.yml  EasyGS_2.yml  EasyGS_3.yml  EasyGS_4.yml
docs/: feishu.md  feishu_zh.md
easygs/: __init__.py  __main__.py  resources.py
easygs/agent/: __init__.py  context.py  loop.py  memory.py  session_runtime.py  skills.py  subagent.py  workflows.py
easygs/agent/tools/: __init__.py  admixture.py  allele_count.py  allele_frequency.py  allele_frequency_spectrum.py  base.py  bfile_extract.py  candidate_gene_extraction.py  combining_ability.py  cron.py  cvf_split.py  env_factor_correlation.py  env_region_correlation.py  environment_index.py  filesystem.py  gebv.py  gene_environment_interaction.py  gene_function_annotation.py  genebody_locus_annotation.py  genotype_encoding.py  genotype_imputation.py  grm.py  gwas.py  heritability.py  ld_decay.py  ld_prune.py  pca.py  (+34 more)
easygs/bus/: __init__.py  events.py  queue.py
easygs/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  websocket.py  whatsapp.py
easygs/cli/: __init__.py  commands.py
easygs/config/: __init__.py  loader.py  schema.py
easygs/cron/: __init__.py  service.py
easygs/heartbeat/: __init__.py
easygs/notifications/: __init__.py  smtp.py
easygs/providers/: __init__.py  base.py  litellm_provider.py  registry.py
easygs/session/: __init__.py  manager.py
easygs/skills/: README.md
easygs/utils/: __init__.py  helpers.py
easygs/web/: __init__.py
easygs/workflows/: __init__.py  schema.py  service.py
env_all/: EasyGS_1.yml  EasyGS_2.yml  EasyGS_3.yml  EasyGS_4.yml
scripts/: build_release.sh  debug_easygs.py
tests/: test_cli_input.py  test_commands.py  test_docker.sh  test_email_channel.py  test_llm_options.py  test_session_runtime.py  test_tool_validation.py  test_webui_websocket.py  test_workflow_service.py
webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx
(+203 files in other folders)
