[project]
name = "easygs"
version = "0.1.4"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "easygs contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.6.0",
    "httpx[socks]>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "dingtalk-stream>=0.4.0",
    "python-telegram-bot[socks]>=21.0",
    "lark-oapi>=1.0.0",
    "socksio>=1.0.0",
    "python-socketio>=5.11.0",
    "msgpack>=1.0.8",
    "slack-sdk>=3.26.0",
    "qq-botpy>=1.0.0",
    "python-socks[asyncio]>=2.4.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
easygs = "easygs.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easygs"]

[tool.hatch.build.targets.wheel.sources]
"easygs" = "easygs"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "easygs/**/*.py",
    "easygs/web/dist/**",
    "easygs/skills/**/*.md",
    "easygs/skills/**/*.yaml",
    "easygs/skills/**/*.bed",
    "easygs/skills/**/*.sh",
    "easygs/skills/**/*.py",
    "easygs/skills/**/*.R",
    "easygs/skills/**/*.r",
]

[tool.hatch.build.targets.sdist]
include = [
    "easygs/",
    "bridge/",
    "README.md",
    "LICENSE",
]
artifacts = [
    "easygs/web/dist/**",
    "softwares/**",
]

[tool.hatch.build.targets.wheel.force-include]
"easygs/web/dist" = "easygs/web/dist"
"bridge" = "easygs/bridge"
"softwares" = "easygs/softwares"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
